--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -12,5 +12,13 @@ Host nd.dhugs.com
 	HostName nd.dhugs.com
 	User dhuggin2
 
+Host desktop
+	HostName desktop
+	User hugs
+
 Host *
+{{- if eq .chezmoi.os "darwin" }}
 	IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
+{{- else }}
+	IdentityAgent "~/.1password/agent.sock"
+{{- end }}
