Refactor playbook.yml and run_once_before_install.sh.tmpl: remove default shell setting and enable Touch ID for sudo on macOS

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,5 +1,8 @@
 export ZSH="$HOME/.oh-my-zsh"
 export PATH="$HOME/bin:$PATH"
+{{ if stat "/escnfs/home/pbui/pub/pkgsrc/bin" -}}
+export PATH=/escnfs/home/pbui/pub/pkgsrc/bin:$PATH
+{{ end -}}
 
 if [ -f ~/.env ]; then
     export $(grep -v '^#' ~/.env | xargs)
