--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,3 +1,8 @@
+{{- $noSudo := promptBoolOnce . "noSudo" "Is this a machine without sudo access" -}}
+{{- $ndStudent := promptBoolOnce . "studentMachine" "Is this a Notre Dame student machine" -}}
+
 [data]
   email = "199662174+declanhuggins@users.noreply.github.com"
   name = "Declan"
+  noSudo = {{ $noSudo }}
+  studentMachine = {{ $studentMachine }}
