--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,6 +1,6 @@
 export ZSH="$HOME/.oh-my-zsh"
 export PATH="$HOME/bin:$PATH"
-{{ if stat "/escnfs/home/pbui/pub/pkgsrc/bin" -}}
+{{ if .studentMachine -}}
 export PATH=/escnfs/home/pbui/pub/pkgsrc/bin:$PATH
 {{ end -}}
 
