Update PATH variable in dot_bashrc and dot_zshrc.tmpl to prioritize local binaries

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,5 +1,5 @@
 export ZSH="$HOME/.oh-my-zsh"
-export PATH="$HOME/bin:$PATH"
+export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
 {{ if .studentMachine -}}
 export PATH=/escnfs/home/pbui/pub/pkgsrc/bin:$PATH
 {{ end -}}
